modules/security_group/rds_sg.tf

// RDS SECURITY GROUP

// Para la base de datos PostgreSQL

resource "aws_security_group" "rds" {
  name        = "${var.project_name}-${var.environment}-rds-sg"
  description = "Security group para RDS PostgreSQL"
  vpc_id      = var.vpc_id

  // REGLAS DE ENTRADA
  // Permitir PostgreSQL SOLO desde ECS services y Lambda

  // Desde ECS Portal, lambda y ecs worker
  ingress {
    description = "PostgreSQL desde ECS Portal"
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    security_groups = [
      aws_security_group.ecs_portal.id,
      aws_security_group.lambda.id,
      aws_security_group.ecs_worker.id
    ]
  }


  //REGLAS DE SALIDA
  // RDS no necesita iniciar conexiones salientes
  // Pero AWS requiere al menos una regla egress
  egress {
    description = "Allow all outbound traffic (required by AWS)"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(
    local.common_tags,
    {
      Name = "${var.project_name}-${var.environment}-rds-sg"
      Type = "RDS"
    }
  )
}
